argocd/services/api/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-http
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - api.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: auth-service
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
